# alloc-test

riscv/: Cargo.toml
riscv/.cargo/: config.toml
riscv/src/: main.rs
xtensa/: Cargo.toml
xtensa/src/: main.rs
