[package]
name    = "alloc_test_xtensa"
version = "0.1.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-alloc    = { git = "https://github.com/jessebraham/esp-alloc", branch = "feature/linked-list-allocator" }
esp32-hal    = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt = { version = "0.11.0", features = ["esp32"], optional = true }

[features]
default = ["rt"]
rt      = ["xtensa-lx-rt"]
